--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,9 @@
   <string>3134</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/LtnSmEgAlef áå/LtnSmAHookAbv/LtnSmAEgAlef.SngStory/LtnSmAEgAlef/LtnSmIEgAlef/LtnSmUEgAlef H/LtnCapAEgAlef H/LtnCapIEgAlef T/LtnCapUEgAlef</string>
+    <string>o/CombTripleAcute o/CombBreve o/CombAcute o/CombDblAcute o/CombGrave o/CombMacron</string>
+    <string>o/CombPlusSgnBlw o/CombMacronBlw o/CombDblPlusSgnBlw o/CombBreveBlw o/CombGraveBlw</string>
+    <string>o/CombTripleAcute o/CombBreve o/CombAcute o/CombDblPlusSgnAbv o/CombDblAcute o/CombGrave o/CombMacron</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
