--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -170,6 +170,8 @@
   <string>C_ombD_blI_nvB_reve.U_L_.glif</string>
   <key>CombDblInvBreve.UU</key>
   <string>C_ombD_blI_nvB_reve.U_U_.glif</string>
+  <key>CombDblInvBreveBlw</key>
+  <string>C_ombD_blI_nvB_reveB_lw.glif</string>
   <key>CombDblInvBreveLft</key>
   <string>C_ombD_blI_nvB_reveL_ft.glif</string>
   <key>CombDblInvBreveRt</key>
@@ -266,6 +268,8 @@
   <string>C_ombI_nvB_reveB_lw.glif</string>
   <key>CombInvBridgeBlw</key>
   <string>C_ombI_nvB_ridgeB_lw.glif</string>
+  <key>CombInvDblArchAbv</key>
+  <string>C_ombI_nvD_blA_rchA_bv.glif</string>
   <key>CombInvDblArchBlw</key>
   <string>C_ombI_nvD_blA_rchB_lw.glif</string>
   <key>CombKayanGraveAcute</key>
@@ -374,6 +378,8 @@
   <string>C_ombP_arensA_bv.glif</string>
   <key>CombParensBlw</key>
   <string>C_ombP_arensB_lw.glif</string>
+  <key>CombPlusSgnAbv</key>
+  <string>C_ombP_lusS_gnA_bv.glif</string>
   <key>CombPlusSgnBlw</key>
   <string>C_ombP_lusS_gnB_lw.glif</string>
   <key>CombRetrHook</key>
@@ -7374,6 +7380,8 @@
   <string>T_ripleV_ertB_ar.glif</string>
   <key>TripleVertBar.bascl</key>
   <string>T_ripleV_ertB_ar.bascl.glif</string>
+  <key>TripleVertBar.sc</key>
+  <string>T_ripleV_ertB_ar.sc.glif</string>
   <key>TugrikSgn</key>
   <string>T_ugrikS_gn.glif</string>
   <key>TurkishLiraSgn</key>
