--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -1464,6 +1464,8 @@
   <string>D_igitZ_ero.dnom.glif</string>
   <key>DivSgn</key>
   <string>D_ivS_gn.glif</string>
+  <key>DivisionSlash</key>
+  <string>D_ivisionS_lash.glif</string>
   <key>DollarSgn</key>
   <string>D_ollarS_gn.glif</string>
   <key>DongSgn</key>
