--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -2445,6 +2445,7 @@
     <string>ModLowVertLine</string>
     <string>ModVertLine</string>
     <string>MeasuredAngle</string>
+    <string>DivisionSlash</string>
     <string>DblSolidus</string>
     <string>CombShortSolidusOverlay</string>
     <string>CombLngSolidusOverlay</string>
@@ -5385,6 +5386,8 @@
     <string>zero.dnom</string>
     <key>DivSgn</key>
     <string>divide</string>
+    <key>DivisionSlash</key>
+    <string>uni2215</string>
     <key>DollarSgn</key>
     <string>dollar</string>
     <key>DongSgn</key>
