--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -8,16 +8,15 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3140</string>
+  <string>3133</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>f/CombDblInvBreve gf/CombDblBreveBlw gf/CombDblBreve gf/CombDblInvBreveBlw g</string>
-    <string>/CombDblInvBreve</string>
-    <string>/CombDblBreveBlw</string>
-    <string>/CombDblBreve</string>
-    <string>/CombDblInvBreveBlw</string>
-    <string>o/CombLtnSmX</string>
-    <string>/CombLtnSmX</string>
+    <string>do/CombLtnSmA o/CombLtnSmA.SngStory o/CombLtnSmC o/CombLtnSmD o/CombLtnSmE o/CombLtnSmG o/CombLtnSmG.SngBowl o/CombLtnSmInsularG o/CombLtnSmH o/CombLtnSmI o/CombCySmByelorusUkrainI o/CombLtnSmK o/CombLtnSmM o/CombLtnSmO o/CombLtnSmR o/CombLtnSmInsularR o/CombLtnSmT o/CombLtnSmInsularT o/CombLtnSmU o/CombLtnSmV o/CombLtnSmTurnedW o/CombLtnSmX/Space</string>
+    <string>o/CombLtnSmA o/CombLtnSmG o/CombLtnSmG.SngBowl o/CombLtnSmInsularG o/CombLtnSmK o/CombLtnSmInsularR o/CombLtnSmInsularT o/CombLtnSmTurnedW o/CombLtnSmTurnedWBlw o/CombLtnSmWBlw o/CombLtnSmRBlw 
+o/CombInvDblArchAbv o/CombBreve o/CombVertLineAbv o/CombPlusSgnAbv o/CombDblPlusSgnAbv o/CombNumSgn o/Space</string>
+    <string>/CombLtnSmRBlw</string>
+    <string>/CombLtnSmTurnedWBlw</string>
+    <string>/CombLtnSmWBlw</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
