--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -2074,6 +2074,8 @@
   <string>L_tnC_apD_H_ook.T_opB_ar.glif</string>
   <key>LtnCapDLineBlw</key>
   <string>L_tnC_apD_L_ineB_lw.glif</string>
+  <key>LtnCapDShortStrk</key>
+  <string>L_tnC_apD_S_hortS_trk.glif</string>
   <key>LtnCapDSmZ</key>
   <string>L_tnC_apD_S_mZ_.glif</string>
   <key>LtnCapDSmZ.sc</key>
@@ -2684,6 +2686,8 @@
   <string>L_tnC_apS_D_otB_lwD_otA_bv.glif</string>
   <key>LtnCapSHook</key>
   <string>L_tnC_apS_H_ook.glif</string>
+  <key>LtnCapSShortStrk</key>
+  <string>L_tnC_apS_S_hortS_trk.glif</string>
   <key>LtnCapSSwashTail</key>
   <string>L_tnC_apS_S_washT_ail.glif</string>
   <key>LtnCapSaltillo</key>
@@ -3824,6 +3828,8 @@
   <string>L_tnS_mD_P_alH_ook.glif</string>
   <key>LtnSmDPalHookDep</key>
   <string>L_tnS_mD_P_alH_ookD_ep.glif</string>
+  <key>LtnSmDShortStrk</key>
+  <string>L_tnS_mD_S_hortS_trk.glif</string>
   <key>LtnSmDTail</key>
   <string>L_tnS_mD_T_ail.glif</string>
   <key>LtnSmDTail.sc</key>
@@ -5310,6 +5316,8 @@
   <string>L_tnS_mS_P_alH_ook.glif</string>
   <key>LtnSmSPalHookDep</key>
   <string>L_tnS_mS_P_alH_ookD_ep.glif</string>
+  <key>LtnSmSShortStrk</key>
+  <string>L_tnS_mS_S_hortS_trk.glif</string>
   <key>LtnSmSSwashTail</key>
   <string>L_tnS_mS_S_washT_ail.glif</string>
   <key>LtnSmSSwashTail.sc</key>
