--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,7 @@
   <string>3149</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/Space/LtnSmBPalHook/Space/Space/CombOgonek.RetroHook/Space/Ogonek.RetroHook/Space/LtnSmZPalHook/LtnSmNPalHook/Space n/CombPalHook/LtnSmHPalHook h/Space n/CombRetrHook/Space</string>
+    <string>ima</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
