--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,7 @@
   <string>3149</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>*Hao.[{}?!o/Asterism oOl</string>
+    <string>H/FaceSmile/Bullet Ho/WhiteCirc ©/Fisheye/TriangularBullet/CheckMrkBox H/BallotBox/BallotMrk/BallotMrkBox</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
