--- a/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
+++ b/source/DoulosSIL-Regular.ufo/glyphs/contents.plist
@@ -342,8 +342,6 @@
   <string>C_ombL_tnS_mR_B_lwD_ep.glif</string>
   <key>CombLtnSmT</key>
   <string>C_ombL_tnS_mT_.glif</string>
-  <key>CombLtnSmTurnedW</key>
-  <string>C_ombL_tnS_mT_urnedW_.glif</string>
   <key>CombLtnSmTurnedWBlw</key>
   <string>C_ombL_tnS_mT_urnedW_B_lw.glif</string>
   <key>CombLtnSmU</key>
@@ -6822,6 +6820,8 @@
   <string>M_odS_mT_urnedR_L_ngL_eg.glif</string>
   <key>ModSmTurnedRLngLegHook</key>
   <string>M_odS_mT_urnedR_L_ngL_egH_ook.glif</string>
+  <key>ModSmTurnedW</key>
+  <string>M_odS_mT_urnedW_.glif</string>
   <key>ModSmTurnedY</key>
   <string>M_odS_mT_urnedY_.glif</string>
   <key>ModSmTurnedYBelt</key>
