--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -29,7 +29,7 @@
   <key>openTypeNameDesigner</key>
   <string>Walt Agee, Victor Gaultney, Peter Martin, Debbi Hosken, Becca Hirsbrunner</string>
   <key>openTypeNameDesignerURL</key>
-  <string>https://scripts.sil.org/</string>
+  <string>https://software.sil.org/wstech/</string>
   <key>openTypeNameLicense</key>
   <string>Copyright (c) 1994-2023 SIL International (https://www.sil.org/) with Reserved Font Names "Doulos" and "SIL".
 
