--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -11,7 +11,8 @@
   <string>3151</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>/Space/CombBreve -x/MetricalBreve noH/MetricalLongShort o/MetricalShortLong fz/MetricalShortShort tzw/MetricalLongShortShort p/MetricalShortShortLong</string>
+    <string>/Space/CombBreve -x/MetricalBreve no/MetricalLongShort o/MetricalShortLong fz/MetricalShortShort/MetricalLongShortShort p/MetricalShortShortLong</string>
+    <string>/LftDblParen/RtDblParen/WigglyVerticalLine/VerticalSixDots/Space/Space/CombDiaer</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
