--- a/source/DoulosSIL-Regular.ufo/fontinfo.plist
+++ b/source/DoulosSIL-Regular.ufo/fontinfo.plist
@@ -16,6 +16,8 @@
   <string>2023/08/17 09:47:00</string>
   <key>openTypeHeadFlags</key>
   <array>
+    <integer>0</integer>
+    <integer>1</integer>
     <integer>3</integer>
   </array>
   <key>openTypeHheaAscender</key>
