--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -29,7 +29,11 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3222</string>
+  <string>3151</string>
+  <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
+  <array>
+    <string>o/CombCaronBlw o/CombSnakeBlw o/CombBreveBlw k/CombInvDblArchBlw/GrSmOmega/Space/Space/CombSeagullBlw/CombInvDblArchAbv/Space/Space/CombLtnSmO</string>
+  </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesLastChange</key>
