--- a/source/DoulosSIL-Regular.ufo/lib.plist
+++ b/source/DoulosSIL-Regular.ufo/lib.plist
@@ -29,10 +29,10 @@
     <array/>
   </dict>
   <key>com.schriftgestaltung.appVersion</key>
-  <string>3151</string>
+  <string>3251</string>
   <key>com.schriftgestaltung.customParameter.GSFont.DisplayStrings</key>
   <array>
-    <string>o/CombCaronBlw o/CombSnakeBlw o/CombBreveBlw k/CombInvDblArchBlw/GrSmOmega/Space/Space/CombSeagullBlw/CombInvDblArchAbv/Space/Space/CombLtnSmO</string>
+    <string>o/CombCaronBlw o/CombSnakeBlw o/CombBreveBlw o/CombInvDblArchBlw/GrSmOmega o/CombLtnSmRBlw o/CombUpArrwBlw o/CombPlusSgnBlw o/CombSeagullBlw o/CombVertLineBlw/LtnSmIota o/CombOpnMrkBlw o/CombDblOpnMrkBlw</string>
   </array>
   <key>com.schriftgestaltung.customParameter.GSFont.disablesAutomaticAlignment</key>
   <true/>
